# CrankNicolson

./: CMakeLists.txt  LICENSE  README.md  SimulationParameter.h  TridiagonalMatrix.h  Vector.h  doxconf.conf  energyeigenvalueobservable.cpp  energyeigenvalueobservable.h  expectationvalueobservable.cpp  expectationvalueobservable.h  gaussianwave.cpp  gaussianwave.h  hamiltonian.h  linearhamiltonian.cpp  linearhamiltonian.h  main.cpp  nonlinearhamiltonian.cpp  nonlinearhamiltonian.h  observable.cpp  observable.h  potentialobservable.cpp  potentialobservable.h  properbilityoberservable.cpp  properbilityoberservable.h  pythoninputdevice.cpp  pythoninputdevice.h  scriptloader.cpp  scriptloader.h  simulation.cpp  simulation.h  simulation.json  simulationexecutor.cpp  simulationexecutor.h  streamdensity.cpp  streamdensity.h  utilitys.h  wave.h
doc/: Project.dox
doc/html/: SimulationParameter_8h_source.html  TridiagonalMatrix_8h_source.html  Vector_8h_source.html  _formulas.tex  annotated.html  annotated.js  classEnergyEigenvalueObservable-members.html  classEnergyEigenvalueObservable.html  classEnergyEigenvalueObservable.js  classExpectationValueObservable-members.html  classGaussianWave-members.html  (+139 more)
scripts/: createPlotScript.py~  energyObservable.py~  expectationValue.py  expectationValue.py~  greenFunction.py  greenFunction.py~  harmonicalPotential.py  harmonicalPotential.py~  main.py~  phononPotential.py  phononPotential.py~  plot.py~  potentialWell.py  potentialWell.py~  properbilityFlux.py  properbilityFlux.py~  soliton.py  solitonSimulation.py  solitonSimulation.py~
(+64 files in other folders)
